# wxPod

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: app.h  device.cpp  device.h  filters.cpp  filters.h  main.cpp  properties.cpp  properties.h  tracklist.cpp  tracklist.h
